@@ -12,116 +12,164 @@
 
 #include "unicode/utypes.h"
 
-#define COLLUNSAFE_ICU_VERSION "56.0.1"
-#define COLLUNSAFE_COLL_VERSION "9.64"
+#define COLLUNSAFE_ICU_VERSION "78.0.1"
+#define COLLUNSAFE_COLL_VERSION "9.136"
 #define COLLUNSAFE_SERIALIZE 1
-static const int32_t unsafe_serializedCount = 850;
-static const uint16_t unsafe_serializedData[850] = { 
-0x8350, 0x01B8, 0x0034, 0x0035, 0x004C, 0x004D, 0x00A0, 0x00A1,  // 8
+static const int32_t unsafe_serializedCount = 1236;
+static const uint16_t unsafe_serializedData[1236] = { 
+0x84D2, 0x01C2, 0x0034, 0x0035, 0x004C, 0x004D, 0x00A0, 0x00A1,  // 8
 0x0300, 0x034F, 0x0350, 0x0370, 0x03A9, 0x03AA, 0x03E2, 0x03E3,  // 16
 0x042F, 0x0430, 0x0483, 0x0488, 0x0531, 0x0532, 0x0591, 0x05BE,  // 24
 0x05BF, 0x05C0, 0x05C1, 0x05C3, 0x05C4, 0x05C6, 0x05C7, 0x05C8,  // 32
 0x05D0, 0x05D1, 0x0610, 0x061B, 0x0628, 0x0629, 0x064B, 0x0660,  // 40
 0x0670, 0x0671, 0x06D6, 0x06DD, 0x06DF, 0x06E5, 0x06E7, 0x06E9,  // 48
 0x06EA, 0x06EE, 0x0710, 0x0712, 0x0730, 0x074B, 0x078C, 0x078D,  // 56
-0x07D8, 0x07D9, 0x07EB, 0x07F4, 0x0800, 0x0801, 0x0816, 0x081A,  // 64
-0x081B, 0x0824, 0x0825, 0x0828, 0x0829, 0x082E, 0x0840, 0x0841,  // 72
-0x0859, 0x085C, 0x08E3, 0x0900, 0x0905, 0x0906, 0x093C, 0x093D,  // 80
-0x094D, 0x094E, 0x0951, 0x0955, 0x0995, 0x0996, 0x09BC, 0x09BD,  // 88
-0x09BE, 0x09BF, 0x09CD, 0x09CE, 0x09D7, 0x09D8, 0x0A15, 0x0A16,  // 96
-0x0A3C, 0x0A3D, 0x0A4D, 0x0A4E, 0x0A95, 0x0A96, 0x0ABC, 0x0ABD,  // 104
-0x0ACD, 0x0ACE, 0x0B15, 0x0B16, 0x0B3C, 0x0B3D, 0x0B3E, 0x0B3F,  // 112
-0x0B4D, 0x0B4E, 0x0B56, 0x0B58, 0x0B95, 0x0B96, 0x0BBE, 0x0BBF,  // 120
-0x0BCD, 0x0BCE, 0x0BD7, 0x0BD8, 0x0C15, 0x0C16, 0x0C4D, 0x0C4E,  // 128
-0x0C55, 0x0C57, 0x0C95, 0x0C96, 0x0CBC, 0x0CBD, 0x0CC2, 0x0CC3,  // 136
-0x0CCD, 0x0CCE, 0x0CD5, 0x0CD7, 0x0D15, 0x0D16, 0x0D3E, 0x0D3F,  // 144
-0x0D4D, 0x0D4E, 0x0D57, 0x0D58, 0x0D85, 0x0D86, 0x0DCA, 0x0DCB,  // 152
-0x0DCF, 0x0DD0, 0x0DDF, 0x0DE0, 0x0E01, 0x0E2F, 0x0E32, 0x0E33,  // 160
-0x0E38, 0x0E3B, 0x0E48, 0x0E4C, 0x0E81, 0x0E83, 0x0E84, 0x0E85,  // 168
-0x0E87, 0x0E89, 0x0E8A, 0x0E8B, 0x0E8D, 0x0E8E, 0x0E94, 0x0E98,  // 176
-0x0E99, 0x0EA0, 0x0EA1, 0x0EA4, 0x0EA5, 0x0EA6, 0x0EA7, 0x0EA8,  // 184
-0x0EAA, 0x0EAC, 0x0EAD, 0x0EAF, 0x0EB2, 0x0EB3, 0x0EB8, 0x0EBA,  // 192
+0x07CA, 0x07CB, 0x07EB, 0x07F4, 0x07FD, 0x07FE, 0x0800, 0x0801,  // 64
+0x0816, 0x081A, 0x081B, 0x0824, 0x0825, 0x0828, 0x0829, 0x082E,  // 72
+0x0840, 0x0841, 0x0859, 0x085C, 0x0897, 0x08A0, 0x08CA, 0x08E2,  // 80
+0x08E3, 0x0900, 0x0905, 0x0906, 0x093C, 0x093D, 0x094D, 0x094E,  // 88
+0x0951, 0x0955, 0x0995, 0x0996, 0x09BC, 0x09BD, 0x09BE, 0x09BF,  // 96
+0x09CD, 0x09CE, 0x09D7, 0x09D8, 0x09FE, 0x09FF, 0x0A15, 0x0A16,  // 104
+0x0A3C, 0x0A3D, 0x0A4D, 0x0A4E, 0x0A95, 0x0A96, 0x0ABC, 0x0ABD,  // 112
+0x0ACD, 0x0ACE, 0x0B15, 0x0B16, 0x0B3C, 0x0B3D, 0x0B3E, 0x0B3F,  // 120
+0x0B4D, 0x0B4E, 0x0B56, 0x0B58, 0x0B95, 0x0B96, 0x0BBE, 0x0BBF,  // 128
+0x0BCD, 0x0BCE, 0x0BD7, 0x0BD8, 0x0C15, 0x0C16, 0x0C3C, 0x0C3D,  // 136
+0x0C4D, 0x0C4E, 0x0C55, 0x0C57, 0x0C95, 0x0C96, 0x0CBC, 0x0CBD,  // 144
+0x0CC2, 0x0CC3, 0x0CCD, 0x0CCE, 0x0CD5, 0x0CD7, 0x0D15, 0x0D16,  // 152
+0x0D3B, 0x0D3D, 0x0D3E, 0x0D3F, 0x0D4D, 0x0D4E, 0x0D57, 0x0D58,  // 160
+0x0D85, 0x0D86, 0x0DCA, 0x0DCB, 0x0DCF, 0x0DD0, 0x0DDF, 0x0DE0,  // 168
+0x0E01, 0x0E2F, 0x0E32, 0x0E33, 0x0E38, 0x0E3B, 0x0E48, 0x0E4C,  // 176
+0x0E81, 0x0E83, 0x0E84, 0x0E85, 0x0E86, 0x0E8B, 0x0E8C, 0x0EA4,  // 184
+0x0EA5, 0x0EA6, 0x0EA7, 0x0EAF, 0x0EB2, 0x0EB3, 0x0EB8, 0x0EBB,  // 192
 0x0EC8, 0x0ECC, 0x0EDC, 0x0EE0, 0x0F18, 0x0F1A, 0x0F35, 0x0F36,  // 200
 0x0F37, 0x0F38, 0x0F39, 0x0F3A, 0x0F40, 0x0F41, 0x0F71, 0x0F76,  // 208
 0x0F7A, 0x0F7E, 0x0F80, 0x0F85, 0x0F86, 0x0F88, 0x0FC6, 0x0FC7,  // 216
 0x1000, 0x1001, 0x102E, 0x102F, 0x1037, 0x1038, 0x1039, 0x103B,  // 224
 0x108D, 0x108E, 0x10D3, 0x10D4, 0x12A0, 0x12A1, 0x135D, 0x1360,  // 232
 0x13C4, 0x13C5, 0x14C0, 0x14C1, 0x168F, 0x1690, 0x16A0, 0x16A1,  // 240
-0x1703, 0x1704, 0x1714, 0x1715, 0x1723, 0x1724, 0x1734, 0x1735,  // 248
+0x1703, 0x1704, 0x1714, 0x1716, 0x1723, 0x1724, 0x1734, 0x1735,  // 248
 0x1743, 0x1744, 0x1763, 0x1764, 0x1780, 0x1781, 0x17D2, 0x17D3,  // 256
 0x17DD, 0x17DE, 0x1826, 0x1827, 0x18A9, 0x18AA, 0x1900, 0x1901,  // 264
 0x1939, 0x193C, 0x1950, 0x1951, 0x1980, 0x19AC, 0x1A00, 0x1A01,  // 272
 0x1A17, 0x1A19, 0x1A20, 0x1A21, 0x1A60, 0x1A61, 0x1A75, 0x1A7D,  // 280
-0x1A7F, 0x1A80, 0x1AB0, 0x1ABE, 0x1B05, 0x1B06, 0x1B34, 0x1B36,  // 288
-0x1B44, 0x1B45, 0x1B6B, 0x1B74, 0x1B83, 0x1B84, 0x1BAA, 0x1BAC,  // 296
-0x1BC0, 0x1BC1, 0x1BE6, 0x1BE7, 0x1BF2, 0x1BF4, 0x1C00, 0x1C01,  // 304
-0x1C37, 0x1C38, 0x1C5A, 0x1C5B, 0x1CD0, 0x1CD3, 0x1CD4, 0x1CE1,  // 312
-0x1CE2, 0x1CE9, 0x1CED, 0x1CEE, 0x1CF4, 0x1CF5, 0x1CF8, 0x1CFA,  // 320
-0x1DC0, 0x1DF6, 0x1DFC, 0x1E00, 0x201C, 0x201D, 0x20AC, 0x20AD,  // 328
-0x20D0, 0x20DD, 0x20E1, 0x20E2, 0x20E5, 0x20F1, 0x263A, 0x263B,  // 336
-0x2C00, 0x2C01, 0x2CEF, 0x2CF2, 0x2D5E, 0x2D5F, 0x2D7F, 0x2D80,  // 344
-0x2DE0, 0x2E00, 0x302A, 0x3030, 0x304B, 0x304C, 0x3099, 0x309B,  // 352
-0x30AB, 0x30AC, 0x3105, 0x3106, 0x5B57, 0x5B58, 0xA288, 0xA289,  // 360
-0xA4E8, 0xA4E9, 0xA549, 0xA54A, 0xA66F, 0xA670, 0xA674, 0xA67E,  // 368
-0xA69E, 0xA6A1, 0xA6F0, 0xA6F2, 0xA800, 0xA801, 0xA806, 0xA807,  // 376
-0xA840, 0xA841, 0xA882, 0xA883, 0xA8C4, 0xA8C5, 0xA8E0, 0xA8F2,  // 384
-0xA90A, 0xA90B, 0xA92B, 0xA92E, 0xA930, 0xA931, 0xA953, 0xA954,  // 392
-0xA984, 0xA985, 0xA9B3, 0xA9B4, 0xA9C0, 0xA9C1, 0xAA00, 0xAA01,  // 400
-0xAA80, 0xAAB1, 0xAAB2, 0xAAB5, 0xAAB7, 0xAAB9, 0xAABE, 0xAAC0,  // 408
-0xAAC1, 0xAAC2, 0xAAF6, 0xAAF7, 0xABC0, 0xABC1, 0xABED, 0xABEE,  // 416
-0xAC00, 0xAC01, 0xD800, 0xD807, 0xD808, 0xD809, 0xD80C, 0xD80D,  // 424
-0xD811, 0xD812, 0xD81A, 0xD81C, 0xD82F, 0xD830, 0xD834, 0xD835,  // 432
-0xD83A, 0xD83B, 0xDC00, 0xE000, 0xFB1E, 0xFB1F, 0xFDD0, 0xFDD1,  // 440
-0xFE20, 0xFE30, 0x0001, 0x0000, 0x0001, 0x0001, 0x0001, 0x01FD,  // 448
-0x0001, 0x01FE, 0x0001, 0x0280, 0x0001, 0x0281, 0x0001, 0x02B7,  // 456
-0x0001, 0x02B8, 0x0001, 0x02E0, 0x0001, 0x02E1, 0x0001, 0x0308,  // 464
-0x0001, 0x0309, 0x0001, 0x0330, 0x0001, 0x0331, 0x0001, 0x036B,  // 472
-0x0001, 0x036C, 0x0001, 0x0376, 0x0001, 0x037B, 0x0001, 0x0380,  // 480
-0x0001, 0x0381, 0x0001, 0x03A0, 0x0001, 0x03A1, 0x0001, 0x0414,  // 488
-0x0001, 0x0415, 0x0001, 0x0450, 0x0001, 0x0451, 0x0001, 0x0480,  // 496
-0x0001, 0x0481, 0x0001, 0x0500, 0x0001, 0x0501, 0x0001, 0x0537,  // 504
-0x0001, 0x0538, 0x0001, 0x0647, 0x0001, 0x0648, 0x0001, 0x0800,  // 512
-0x0001, 0x0801, 0x0001, 0x0840, 0x0001, 0x0841, 0x0001, 0x0873,  // 520
-0x0001, 0x0874, 0x0001, 0x0896, 0x0001, 0x0897, 0x0001, 0x08F4,  // 528
-0x0001, 0x08F5, 0x0001, 0x0900, 0x0001, 0x0901, 0x0001, 0x0920,  // 536
-0x0001, 0x0921, 0x0001, 0x0980, 0x0001, 0x0981, 0x0001, 0x09A0,  // 544
-0x0001, 0x09A1, 0x0001, 0x0A00, 0x0001, 0x0A01, 0x0001, 0x0A0D,  // 552
-0x0001, 0x0A0E, 0x0001, 0x0A0F, 0x0001, 0x0A10, 0x0001, 0x0A38,  // 560
-0x0001, 0x0A3B, 0x0001, 0x0A3F, 0x0001, 0x0A40, 0x0001, 0x0A60,  // 568
-0x0001, 0x0A61, 0x0001, 0x0A95, 0x0001, 0x0A96, 0x0001, 0x0AC1,  // 576
-0x0001, 0x0AC2, 0x0001, 0x0AE5, 0x0001, 0x0AE7, 0x0001, 0x0B00,  // 584
-0x0001, 0x0B01, 0x0001, 0x0B40, 0x0001, 0x0B41, 0x0001, 0x0B60,  // 592
-0x0001, 0x0B61, 0x0001, 0x0B8F, 0x0001, 0x0B90, 0x0001, 0x0C00,  // 600
-0x0001, 0x0C01, 0x0001, 0x0CA1, 0x0001, 0x0CA2, 0x0001, 0x1005,  // 608
-0x0001, 0x1006, 0x0001, 0x1046, 0x0001, 0x1047, 0x0001, 0x107F,  // 616
-0x0001, 0x1080, 0x0001, 0x1083, 0x0001, 0x1084, 0x0001, 0x10B9,  // 624
-0x0001, 0x10BB, 0x0001, 0x10D0, 0x0001, 0x10D1, 0x0001, 0x1100,  // 632
-0x0001, 0x1104, 0x0001, 0x1127, 0x0001, 0x1128, 0x0001, 0x1133,  // 640
-0x0001, 0x1135, 0x0001, 0x1152, 0x0001, 0x1153, 0x0001, 0x1173,  // 648
-0x0001, 0x1174, 0x0001, 0x1183, 0x0001, 0x1184, 0x0001, 0x11C0,  // 656
-0x0001, 0x11C1, 0x0001, 0x11CA, 0x0001, 0x11CB, 0x0001, 0x1208,  // 664
-0x0001, 0x1209, 0x0001, 0x1235, 0x0001, 0x1237, 0x0001, 0x128F,  // 672
-0x0001, 0x1290, 0x0001, 0x12BE, 0x0001, 0x12BF, 0x0001, 0x12E9,  // 680
-0x0001, 0x12EB, 0x0001, 0x1315, 0x0001, 0x1316, 0x0001, 0x133C,  // 688
-0x0001, 0x133D, 0x0001, 0x133E, 0x0001, 0x133F, 0x0001, 0x134D,  // 696
-0x0001, 0x134E, 0x0001, 0x1357, 0x0001, 0x1358, 0x0001, 0x1366,  // 704
-0x0001, 0x136D, 0x0001, 0x1370, 0x0001, 0x1375, 0x0001, 0x1484,  // 712
-0x0001, 0x1485, 0x0001, 0x14B0, 0x0001, 0x14B1, 0x0001, 0x14BA,  // 720
-0x0001, 0x14BB, 0x0001, 0x14BD, 0x0001, 0x14BE, 0x0001, 0x14C2,  // 728
-0x0001, 0x14C4, 0x0001, 0x158E, 0x0001, 0x158F, 0x0001, 0x15AF,  // 736
-0x0001, 0x15B0, 0x0001, 0x15BF, 0x0001, 0x15C1, 0x0001, 0x160E,  // 744
-0x0001, 0x160F, 0x0001, 0x163F, 0x0001, 0x1640, 0x0001, 0x1680,  // 752
-0x0001, 0x1681, 0x0001, 0x16B6, 0x0001, 0x16B8, 0x0001, 0x1717,  // 760
-0x0001, 0x1718, 0x0001, 0x172B, 0x0001, 0x172C, 0x0001, 0x18B4,  // 768
-0x0001, 0x18B5, 0x0001, 0x1AC0, 0x0001, 0x1AC1, 0x0001, 0x2000,  // 776
-0x0001, 0x2001, 0x0001, 0x3153, 0x0001, 0x3154, 0x0001, 0x4400,  // 784
-0x0001, 0x4401, 0x0001, 0x6A4F, 0x0001, 0x6A50, 0x0001, 0x6AE6,  // 792
-0x0001, 0x6AE7, 0x0001, 0x6AF0, 0x0001, 0x6AF5, 0x0001, 0x6B1C,  // 800
-0x0001, 0x6B1D, 0x0001, 0x6B30, 0x0001, 0x6B37, 0x0001, 0x6F00,  // 808
-0x0001, 0x6F01, 0x0001, 0xBC20, 0x0001, 0xBC21, 0x0001, 0xBC9E,  // 816
-0x0001, 0xBC9F, 0x0001, 0xD165, 0x0001, 0xD16A, 0x0001, 0xD16D,  // 824
-0x0001, 0xD173, 0x0001, 0xD17B, 0x0001, 0xD183, 0x0001, 0xD185,  // 832
-0x0001, 0xD18C, 0x0001, 0xD1AA, 0x0001, 0xD1AE, 0x0001, 0xD242,  // 840
-0x0001, 0xD245, 0x0001, 0xE802, 0x0001, 0xE803, 0x0001, 0xE8D0,  // 848
-0x0001, 0xE8D7};
+0x1A7F, 0x1A80, 0x1AB0, 0x1ABE, 0x1ABF, 0x1ADE, 0x1AE0, 0x1AEC,  // 288
+0x1B05, 0x1B06, 0x1B34, 0x1B36, 0x1B44, 0x1B45, 0x1B6B, 0x1B74,  // 296
+0x1B83, 0x1B84, 0x1BAA, 0x1BAC, 0x1BC0, 0x1BC1, 0x1BE6, 0x1BE7,  // 304
+0x1BF2, 0x1BF4, 0x1C00, 0x1C01, 0x1C37, 0x1C38, 0x1C5A, 0x1C5B,  // 312
+0x1CD0, 0x1CD3, 0x1CD4, 0x1CE1, 0x1CE2, 0x1CE9, 0x1CED, 0x1CEE,  // 320
+0x1CF4, 0x1CF5, 0x1CF8, 0x1CFA, 0x1DC0, 0x1E00, 0x201C, 0x201D,  // 328
+0x20AC, 0x20AD, 0x20D0, 0x20DD, 0x20E1, 0x20E2, 0x20E5, 0x20F1,  // 336
+0x263A, 0x263B, 0x2C00, 0x2C01, 0x2CEF, 0x2CF2, 0x2D30, 0x2D31,  // 344
+0x2D7F, 0x2D80, 0x2DE0, 0x2E00, 0x302A, 0x3030, 0x304B, 0x304C,  // 352
+0x3099, 0x309B, 0x30AB, 0x30AC, 0x3105, 0x3106, 0x5B57, 0x5B58,  // 360
+0xA288, 0xA289, 0xA4D0, 0xA4D1, 0xA549, 0xA54A, 0xA66F, 0xA670,  // 368
+0xA674, 0xA67E, 0xA69E, 0xA6A1, 0xA6F0, 0xA6F2, 0xA800, 0xA801,  // 376
+0xA806, 0xA807, 0xA82C, 0xA82D, 0xA840, 0xA841, 0xA882, 0xA883,  // 384
+0xA8C4, 0xA8C5, 0xA8E0, 0xA8F2, 0xA90A, 0xA90B, 0xA92B, 0xA92E,  // 392
+0xA930, 0xA931, 0xA953, 0xA954, 0xA984, 0xA985, 0xA9B3, 0xA9B4,  // 400
+0xA9C0, 0xA9C1, 0xAA00, 0xAA01, 0xAA80, 0xAAB1, 0xAAB2, 0xAAB5,  // 408
+0xAAB7, 0xAAB9, 0xAABE, 0xAAC0, 0xAAC1, 0xAAC2, 0xAAF6, 0xAAF7,  // 416
+0xABC0, 0xABC1, 0xABED, 0xABEE, 0xAC00, 0xAC01, 0xD800, 0xD809,  // 424
+0xD80B, 0xD80D, 0xD811, 0xD812, 0xD818, 0xD819, 0xD81A, 0xD81C,  // 432
+0xD820, 0xD821, 0xD823, 0xD824, 0xD82C, 0xD82D, 0xD82F, 0xD830,  // 440
+0xD834, 0xD835, 0xD838, 0xD83B, 0xDC00, 0xE000, 0xFB1E, 0xFB1F,  // 448
+0xFDD0, 0xFDD1, 0xFE20, 0xFE30, 0x0001, 0x0000, 0x0001, 0x0001,  // 456
+0x0001, 0x01FD, 0x0001, 0x01FE, 0x0001, 0x0280, 0x0001, 0x0281,  // 464
+0x0001, 0x02A0, 0x0001, 0x02A1, 0x0001, 0x02E0, 0x0001, 0x02E1,  // 472
+0x0001, 0x0300, 0x0001, 0x0301, 0x0001, 0x0330, 0x0001, 0x0331,  // 480
+0x0001, 0x036B, 0x0001, 0x036C, 0x0001, 0x0376, 0x0001, 0x037B,  // 488
+0x0001, 0x0380, 0x0001, 0x0381, 0x0001, 0x03A0, 0x0001, 0x03A1,  // 496
+0x0001, 0x0414, 0x0001, 0x0415, 0x0001, 0x0450, 0x0001, 0x0451,  // 504
+0x0001, 0x0480, 0x0001, 0x0481, 0x0001, 0x04B5, 0x0001, 0x04B6,  // 512
+0x0001, 0x0500, 0x0001, 0x0501, 0x0001, 0x0537, 0x0001, 0x0538,  // 520
+0x0001, 0x0582, 0x0001, 0x0583, 0x0001, 0x05C2, 0x0001, 0x05C3,  // 528
+0x0001, 0x0647, 0x0001, 0x0648, 0x0001, 0x0800, 0x0001, 0x0801,  // 536
+0x0001, 0x0840, 0x0001, 0x0841, 0x0001, 0x0873, 0x0001, 0x0874,  // 544
+0x0001, 0x0896, 0x0001, 0x0897, 0x0001, 0x08F4, 0x0001, 0x08F5,  // 552
+0x0001, 0x0900, 0x0001, 0x0901, 0x0001, 0x0920, 0x0001, 0x0921,  // 560
+0x0001, 0x0950, 0x0001, 0x0951, 0x0001, 0x0980, 0x0001, 0x0981,  // 568
+0x0001, 0x09A0, 0x0001, 0x09A1, 0x0001, 0x0A00, 0x0001, 0x0A01,  // 576
+0x0001, 0x0A0D, 0x0001, 0x0A0E, 0x0001, 0x0A0F, 0x0001, 0x0A10,  // 584
+0x0001, 0x0A38, 0x0001, 0x0A3B, 0x0001, 0x0A3F, 0x0001, 0x0A40,  // 592
+0x0001, 0x0A60, 0x0001, 0x0A61, 0x0001, 0x0A95, 0x0001, 0x0A96,  // 600
+0x0001, 0x0AD8, 0x0001, 0x0AD9, 0x0001, 0x0AE5, 0x0001, 0x0AE7,  // 608
+0x0001, 0x0B00, 0x0001, 0x0B01, 0x0001, 0x0B40, 0x0001, 0x0B41,  // 616
+0x0001, 0x0B60, 0x0001, 0x0B61, 0x0001, 0x0B8F, 0x0001, 0x0B90,  // 624
+0x0001, 0x0C00, 0x0001, 0x0C01, 0x0001, 0x0CA1, 0x0001, 0x0CA2,  // 632
+0x0001, 0x0D12, 0x0001, 0x0D13, 0x0001, 0x0D24, 0x0001, 0x0D28,  // 640
+0x0001, 0x0D5D, 0x0001, 0x0D5E, 0x0001, 0x0D69, 0x0001, 0x0D6E,  // 648
+0x0001, 0x0E88, 0x0001, 0x0E89, 0x0001, 0x0EAB, 0x0001, 0x0EAD,  // 656
+0x0001, 0x0EFA, 0x0001, 0x0EFC, 0x0001, 0x0EFD, 0x0001, 0x0F00,  // 664
+0x0001, 0x0F19, 0x0001, 0x0F1A, 0x0001, 0x0F42, 0x0001, 0x0F43,  // 672
+0x0001, 0x0F46, 0x0001, 0x0F51, 0x0001, 0x0F7C, 0x0001, 0x0F7D,  // 680
+0x0001, 0x0F82, 0x0001, 0x0F86, 0x0001, 0x0FBF, 0x0001, 0x0FC0,  // 688
+0x0001, 0x0FF1, 0x0001, 0x0FF2, 0x0001, 0x1005, 0x0001, 0x1006,  // 696
+0x0001, 0x1046, 0x0001, 0x1047, 0x0001, 0x1070, 0x0001, 0x1071,  // 704
+0x0001, 0x107F, 0x0001, 0x1080, 0x0001, 0x1083, 0x0001, 0x1084,  // 712
+0x0001, 0x10B9, 0x0001, 0x10BB, 0x0001, 0x10D0, 0x0001, 0x10D1,  // 720
+0x0001, 0x1100, 0x0001, 0x1104, 0x0001, 0x1127, 0x0001, 0x1128,  // 728
+0x0001, 0x1133, 0x0001, 0x1135, 0x0001, 0x1152, 0x0001, 0x1153,  // 736
+0x0001, 0x1173, 0x0001, 0x1174, 0x0001, 0x1183, 0x0001, 0x1184,  // 744
+0x0001, 0x11C0, 0x0001, 0x11C1, 0x0001, 0x11CA, 0x0001, 0x11CB,  // 752
+0x0001, 0x1208, 0x0001, 0x1209, 0x0001, 0x1235, 0x0001, 0x1237,  // 760
+0x0001, 0x128F, 0x0001, 0x1290, 0x0001, 0x12BE, 0x0001, 0x12BF,  // 768
+0x0001, 0x12E9, 0x0001, 0x12EB, 0x0001, 0x1315, 0x0001, 0x1316,  // 776
+0x0001, 0x133B, 0x0001, 0x133D, 0x0001, 0x133E, 0x0001, 0x133F,  // 784
+0x0001, 0x134D, 0x0001, 0x134E, 0x0001, 0x1357, 0x0001, 0x1358,  // 792
+0x0001, 0x1366, 0x0001, 0x136D, 0x0001, 0x1370, 0x0001, 0x1375,  // 800
+0x0001, 0x1392, 0x0001, 0x1393, 0x0001, 0x13B8, 0x0001, 0x13B9,  // 808
+0x0001, 0x13BB, 0x0001, 0x13BC, 0x0001, 0x13C2, 0x0001, 0x13C3,  // 816
+0x0001, 0x13C9, 0x0001, 0x13CA, 0x0001, 0x13CE, 0x0001, 0x13D1,  // 824
+0x0001, 0x1412, 0x0001, 0x1413, 0x0001, 0x1442, 0x0001, 0x1443,  // 832
+0x0001, 0x1446, 0x0001, 0x1447, 0x0001, 0x145E, 0x0001, 0x145F,  // 840
+0x0001, 0x1484, 0x0001, 0x1485, 0x0001, 0x14B0, 0x0001, 0x14B1,  // 848
+0x0001, 0x14BA, 0x0001, 0x14BB, 0x0001, 0x14BD, 0x0001, 0x14BE,  // 856
+0x0001, 0x14C2, 0x0001, 0x14C4, 0x0001, 0x158E, 0x0001, 0x158F,  // 864
+0x0001, 0x15AF, 0x0001, 0x15B0, 0x0001, 0x15BF, 0x0001, 0x15C1,  // 872
+0x0001, 0x160E, 0x0001, 0x160F, 0x0001, 0x163F, 0x0001, 0x1640,  // 880
+0x0001, 0x1680, 0x0001, 0x1681, 0x0001, 0x16B6, 0x0001, 0x16B8,  // 888
+0x0001, 0x1717, 0x0001, 0x1718, 0x0001, 0x172B, 0x0001, 0x172C,  // 896
+0x0001, 0x180B, 0x0001, 0x180C, 0x0001, 0x1839, 0x0001, 0x183B,  // 904
+0x0001, 0x18B4, 0x0001, 0x18B5, 0x0001, 0x190C, 0x0001, 0x190D,  // 912
+0x0001, 0x1930, 0x0001, 0x1931, 0x0001, 0x193D, 0x0001, 0x193F,  // 920
+0x0001, 0x1943, 0x0001, 0x1944, 0x0001, 0x19CE, 0x0001, 0x19CF,  // 928
+0x0001, 0x19E0, 0x0001, 0x19E1, 0x0001, 0x1A0B, 0x0001, 0x1A0C,  // 936
+0x0001, 0x1A34, 0x0001, 0x1A35, 0x0001, 0x1A47, 0x0001, 0x1A48,  // 944
+0x0001, 0x1A5C, 0x0001, 0x1A5D, 0x0001, 0x1A99, 0x0001, 0x1A9A,  // 952
+0x0001, 0x1AC0, 0x0001, 0x1AC1, 0x0001, 0x1BC4, 0x0001, 0x1BC5,  // 960
+0x0001, 0x1C0E, 0x0001, 0x1C0F, 0x0001, 0x1C3F, 0x0001, 0x1C40,  // 968
+0x0001, 0x1C72, 0x0001, 0x1C73, 0x0001, 0x1D10, 0x0001, 0x1D11,  // 976
+0x0001, 0x1D42, 0x0001, 0x1D43, 0x0001, 0x1D44, 0x0001, 0x1D46,  // 984
+0x0001, 0x1D71, 0x0001, 0x1D72, 0x0001, 0x1D97, 0x0001, 0x1D98,  // 992
+0x0001, 0x1DC6, 0x0001, 0x1DC7, 0x0001, 0x1EE5, 0x0001, 0x1EE6,  // 1000
+0x0001, 0x1F1B, 0x0001, 0x1F1C, 0x0001, 0x1F41, 0x0001, 0x1F43,  // 1008
+0x0001, 0x2000, 0x0001, 0x2001, 0x0001, 0x2FE5, 0x0001, 0x2FE6,  // 1016
+0x0001, 0x3153, 0x0001, 0x3154, 0x0001, 0x4400, 0x0001, 0x4401,  // 1024
+0x0001, 0x611C, 0x0001, 0x611D, 0x0001, 0x611E, 0x0001, 0x6121,  // 1032
+0x0001, 0x6123, 0x0001, 0x6126, 0x0001, 0x6129, 0x0001, 0x612A,  // 1040
+0x0001, 0x612F, 0x0001, 0x6130, 0x0001, 0x6A4F, 0x0001, 0x6A50,  // 1048
+0x0001, 0x6ABC, 0x0001, 0x6ABD, 0x0001, 0x6AE6, 0x0001, 0x6AE7,  // 1056
+0x0001, 0x6AF0, 0x0001, 0x6AF5, 0x0001, 0x6B1C, 0x0001, 0x6B1D,  // 1064
+0x0001, 0x6B30, 0x0001, 0x6B37, 0x0001, 0x6D45, 0x0001, 0x6D46,  // 1072
+0x0001, 0x6D67, 0x0001, 0x6D69, 0x0001, 0x6E40, 0x0001, 0x6E41,  // 1080
+0x0001, 0x6EA1, 0x0001, 0x6EA2, 0x0001, 0x6F00, 0x0001, 0x6F01,  // 1088
+0x0001, 0x6FF0, 0x0001, 0x6FF2, 0x0001, 0x8229, 0x0001, 0x822A,  // 1096
+0x0001, 0x8C65, 0x0001, 0x8C66, 0x0001, 0xB1C4, 0x0001, 0xB1C5,  // 1104
+0x0001, 0xBC20, 0x0001, 0xBC21, 0x0001, 0xBC9E, 0x0001, 0xBC9F,  // 1112
+0x0001, 0xD165, 0x0001, 0xD16A, 0x0001, 0xD16D, 0x0001, 0xD173,  // 1120
+0x0001, 0xD17B, 0x0001, 0xD183, 0x0001, 0xD185, 0x0001, 0xD18C,  // 1128
+0x0001, 0xD1AA, 0x0001, 0xD1AE, 0x0001, 0xD242, 0x0001, 0xD245,  // 1136
+0x0001, 0xE000, 0x0001, 0xE007, 0x0001, 0xE008, 0x0001, 0xE019,  // 1144
+0x0001, 0xE01B, 0x0001, 0xE022, 0x0001, 0xE023, 0x0001, 0xE025,  // 1152
+0x0001, 0xE026, 0x0001, 0xE02B, 0x0001, 0xE08F, 0x0001, 0xE090,  // 1160
+0x0001, 0xE108, 0x0001, 0xE109, 0x0001, 0xE130, 0x0001, 0xE137,  // 1168
+0x0001, 0xE290, 0x0001, 0xE291, 0x0001, 0xE2AE, 0x0001, 0xE2AF,  // 1176
+0x0001, 0xE2E1, 0x0001, 0xE2E2, 0x0001, 0xE2EC, 0x0001, 0xE2F0,  // 1184
+0x0001, 0xE4E6, 0x0001, 0xE4E7, 0x0001, 0xE4EC, 0x0001, 0xE4F0,  // 1192
+0x0001, 0xE5D0, 0x0001, 0xE5D1, 0x0001, 0xE5EE, 0x0001, 0xE5F0,  // 1200
+0x0001, 0xE6D5, 0x0001, 0xE6D6, 0x0001, 0xE6E3, 0x0001, 0xE6E4,  // 1208
+0x0001, 0xE6E6, 0x0001, 0xE6E7, 0x0001, 0xE6EE, 0x0001, 0xE6F0,  // 1216
+0x0001, 0xE6F5, 0x0001, 0xE6F6, 0x0001, 0xE802, 0x0001, 0xE803,  // 1224
+0x0001, 0xE8D0, 0x0001, 0xE8D7, 0x0001, 0xE909, 0x0001, 0xE90A,  // 1232
+0x0001, 0xE944, 0x0001, 0xE94B};
 #endif
