@@ -103,8 +103,11 @@ int main(int argc, const char *argv[]) {
 
   // Generate the output file.
 
+  printf("// © 2016 and later: Unicode, Inc. and others.\n");
+  printf("// License & terms of use: http://www.unicode.org/copyright.html\n");
   printf("// collunsafe.h\n");
-  printf("// %s\n", U_COPYRIGHT_STRING);
+  printf("//  Copyright (C) 2015-2016, International Business Machines Corporation and others.\n");
+  printf("//  All Rights Reserved.\n");
   printf("\n");
   printf("// To be included by collationdatareader.cpp, and generated by gencolusb.\n");
   printf("// Machine generated, do not edit.\n");
